--- a/GarageManager/MasterPage.master
+++ b/GarageManager/MasterPage.master
@@ -20,7 +20,7 @@
             </div>
             <div id="navigation">
                 <ul id="nav">
-                    <li><asp:HyperLink id="HyperLink1" runat="server">Webshop</asp:HyperLink></li>
+                    <li><asp:HyperLink id="HyperLink1" runat="server" NavigateUrl="~/Index.aspx">Webshop</asp:HyperLink></li>
                     <li><asp:HyperLink id="HyperLink2" runat="server" NavigateUrl="~/Pages/About.aspx">About us</asp:HyperLink></li>
                     <li><asp:HyperLink id="HyperLink3" runat="server">Reports</asp:HyperLink></li>
                     <li><asp:HyperLink id="HyperLink4" runat="server" NavigateUrl="~/Pages/Management/Management.aspx">Management</asp:HyperLink></li>
