--- a/GarageManager/Styles/StyleSheet.css
+++ b/GarageManager/Styles/StyleSheet.css
@@ -2,7 +2,7 @@
     color: #574c3f;
     font-family: Corbel, Arial, Helvetica, Verdana, sans-serif;
     font-size: 16px;
-     background-color: lavender;
+    background-color: lavender;
 }
 
 #wrapper {
@@ -10,7 +10,6 @@
     margin: auto;
     padding-bottom: 20px;
     background-color: white;
-
     -moz-border-radius: 25px;
     -webkit-border-radius: 25px;
     border-radius: 25px;
@@ -58,4 +57,67 @@
 #content {
     padding: 29px;
     min-height: 400px;
+}
+
+#ContentPlaceHolder1_pnlProducts div {
+    float: left;
+    width: 250px;
+    height: 250px;
+    text-align: center;
+}
+
+.productPanel {
+    float: left;
+    text-align: center;
+    width: 250px;
+    height: 250px;
+}
+
+.productImage {
+    width: 150px;
+    height: 150px;
+    vertical-align: central;
+    padding: 10px;
+    border-radius: 50px;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+}
+
+.productName {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.productPrice {
+    font-family: arial, helvetica, sans-serif;
+    color: #FFB600;
+}
+
+
+.detailsImage {
+    width: 400px;
+    height: 400px;
+    margin-right: 20px;
+}
+.detailsDescription {
+    width: 400px;
+    font-style: italic;
+    margin-right: 20px;
+}
+
+.detailsPrice {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.button {
+    padding: 10px;
+    margin: 10px;
+    color: #ffffff;
+    border: 0;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    clear: both;
+    background: linear-gradient(to bottom, darkgreen, green);
 }
