--- a/GarageManager/MasterPage.master
+++ b/GarageManager/MasterPage.master
@@ -24,6 +24,17 @@
                     <li><asp:HyperLink id="HyperLink2" runat="server" NavigateUrl="~/Pages/About.aspx">About us</asp:HyperLink></li>
                     <li><asp:HyperLink id="HyperLink3" runat="server">Reports</asp:HyperLink></li>
                     <li><asp:HyperLink id="HyperLink4" runat="server" NavigateUrl="~/Pages/Management/Management.aspx">Management</asp:HyperLink></li>
+                    
+                    <li style="float: right">
+                        <asp:HyperLink ID="lnkRegister" NavigateUrl="~/Pages/Account/Register.aspx" runat="server">Register</asp:HyperLink>
+                        <asp:HyperLink ID="litStatus" runat="server"></asp:HyperLink>
+
+                    </li>
+                    
+                    <li style="float: right">
+                        <asp:HyperLink ID="lnkLogin" NavigateUrl="~/Pages/Account/Login.aspx" runat="server">Log in</asp:HyperLink>
+                        <asp:LinkButton ID="lnkLogout" runat="server" OnClick="lnkLogout_Click">Log out</asp:LinkButton>
+                    </li>
                 </ul>
             </div>
             <div id="content">
